lc menu fixes with z-index 500

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -20,3 +20,7 @@ h6 { font-size: 1.1em; font-size: 2.75vh}
   padding-left: 0px !important;
   padding-right: 0px !important;
 }
+
+#dslc-header.dslc-header-pos-fixed {
+  z-index: 500 !important;
+}
